# segmentedEncoder-rust

./: .gitignore  Cargo.toml  api.yaml  readme.md
.github/actions/cargo/: action.yml
.github/actions/protoc/: action.yml
.github/workflows/: rust.yml
application/api/: Cargo.toml  build.rs
application/api/src/: lib.rs
application/auth_module/: Cargo.toml
application/auth_module/src/: lib.rs
application/client/: Cargo.toml
application/client/src/: ffmpeg_runner.rs  lib.rs  main.rs
application/containers/: Cargo.toml
application/grpc-proto/: build.rs
application/server/: Cargo.toml
application/server/auth_module/: Cargo.toml
application/server/containers/src/: weak_map.rs
application/server/src/: api.rs  lib.rs  main.rs  storage.rs  web.rs
application/server/src/api/: client.rs  utils.rs  worker.rs
application/server/src/client_interface/grpc_service/: auth_interceptor.rs
application/server/src/job_db/: mod.rs
application/server/src/storage/: old.rs
application/server/src/web/: api.rs
application/server/tests/: grpc.rs
application/task/: Cargo.toml
application/task/src/: conversion.rs  manager.rs  task.rs
application/task/src/manager/: db.rs
client/: Cargo.toml
client/src/: main.rs
docs/diagram/: workspace.dsl  workspace.json
example/: Cargo.toml  build.rs
example/proto/: status.proto
example/src/: client.rs  grpc.rs  server.rs  status_reporter.rs
example/web-root/: index.html  main.js
grpc-proto/: Cargo.toml  build.rs
grpc-proto/proto/: client.proto  echo.proto
grpc-proto/src/: lib.rs
grpc_proto/: Cargo.toml
grpc_proto/src/: client.rs  grpc.rs  lib.rs  server.rs  status_reporter.rs
server/: Cargo.toml
server/auth_module/: Cargo.toml
server/auth_module/src/: lib.rs
server/containers/: Cargo.toml
server/containers/src/: lib.rs  timed_map.rs  weak_map.rs
server/src/: client_interface.rs  job_manager.rs  jobs.rs  lib.rs  main.rs  storage.rs  web.rs
server/src/client_interface/: grpc_service.rs
server/src/client_interface/grpc_service/: auth_interceptor.rs
server/src/job_db/: mod.rs
server/src/job_manager/: job_scheduler.rs  job_segmenter.rs  old_job_segmenter.rs  old_task_scheduler.rs  segmenter.rs  task_scheduler.rs
server/src/job_manager/job_scheduler/: allocator.rs
server/src/jobs/: manager.rs  segmenter.rs
server/src/jobs/manager/: old_job_segmenter.rs  old_task_scheduler.rs  scheduler.rs
server/src/jobs/manager/scheduler/: allocator.rs
server/src/web/: api.rs  debug.rs
server/tests/: grpc.rs
web-frontend/: .eslintrc.yml  Cargo.toml  build.js  build.rs  package-lock.json  package.json  tsconfig.json
web-frontend/src/: api.ts  app.tsx  index.html  index.ts  index.tsx  jobs.ts  jobs.tsx  lib.rs  serverSelector.tsx  status.ts  status.tsx  style.css  tabs.tsx
web-frontend/src/components/: tabs.tsx
web-frontend/src/components/tabs/: jobs.css  jobs.tsx  serverSelector.tsx  status.tsx
web-frontend/src/lib/: api.ts  api.tsx  apiExtractServer.tsx  apiProvider.tsx  api_old.tsx  router_util.tsx  tab.ts  task.ts  utils.ts
web-frontend/src/styles/: dialog.css  tabs.css
web-frontend/web-root/: index.html  index.ts  index.xhtml  jobs.ts  main.js  status.ts  style.css  tab.ts  tsconfig.json
web-frontend/web-src/: index.ts  status.ts
web-packer/: Cargo.toml
web-packer/src/: lib.rs
