[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "process"] }
grpc-proto = { path = "../grpc-proto" }
tonic = { version = "0.9.1", features = ["transport"] }
uuid = "1.1.2"
shell-words = "1.1.0"