[package]
name = "grpc-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9.1"
prost = "0.11"
futures-util = "0.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
tower = "0.4.13"
uuid = "1.1.2"

[build-dependencies]
tonic-build = "0.9.1"
# Also needs protoc, on ubuntu: apt install -y protobuf-compiler
