[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3.24"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
hyper = "0.14.20"
axum = "0.5.15"
web-frontend = { path = "../web-frontend" }
tempfile = "3"
uuid = { version = "1.1.2", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.4.13"