[package]
name = "server"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-debug"]
# web-debug exposes internal data trough the web interface
web-debug = []

[dependencies]
containers = { path = "./containers" }
async-trait = "0.1.57"
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3.24"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
hyper = "0.14.20"
axum = "0.6.2"
tempfile = "3"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
grpc-proto = { path = "../grpc-proto" }
tonic = { version = "0.9.1", default-features = false }
multiplex-tonic-hyper = "0.1.0"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies]
tonic = "0.9.1"
reqwest = { version = "0.11.12", default-features = false }