[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"

[build-dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.12.3", features = ["stream"] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
