[package]
name = "api"
version = "0.1.0"
edition = "2021"

[features]
client = ["reqwest", "serde_json", "url", "uuid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"

reqwest = { version = "^0.11", features = ["json", "multipart"], optional = true }
serde_json = { version = "^1.0", optional = true }
url = { version = "^2.2", optional = true }
uuid = { version = "^1.0", features = ["serde", "v4"], optional = true }

[build-dependencies]
futures-util = "0.3.30"
reqwest = { version = "0.12.3", features = ["stream"] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }
tokio-util = { version = "0.7.10", features = ["io"] }
