[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api", features = ["client"] }
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", default-features = false }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }