[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api", features = ["client"] }
task = { path = "../task" }
clap = { version = "4.5.4", features = ["derive", "env"] }
reqwest = { version = "0.12.3", default-features = false, features = ["stream"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.10", features = ["io"] }
uuid = { version = "1.8.0", features = ["v4"] }