[package]
name = "server"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web-debug"]
# web-debug exposes internal data through the web interface
web-debug = []

[dependencies]
containers = { path = "../containers" }
async-trait = "0.1.57"
tokio-util = { version = "0.7.4", features = ["io"] }
futures = "0.3.24"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
hyper = "1.2.0"
axum = "0.7.5"
tempfile = "3"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
task = { path = "../task" }
api = { path = "../api" }

[dev-dependencies]
axum-test = "14.8.0"
tonic = "0.11.0"
reqwest = { version = "0.12.3", default-features = false }