[package]
name = "server"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
tokio-util = { version = "0.7.10", features = ["io"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util", "sync"] }
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-range = "0.4.0"
axum-server = "0.6.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
clap = { version = "4.5.4", features = ["derive"] }
task = { path = "../task" }
api = { path = "../api" }
auth_module = { path = "../auth_module" }

[dev-dependencies]
axum-test = "14.8.0"
mockall = "0.12.1"