[package]
name = "task"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/task.rs"

[features]
runner = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1.37.0", features = ["macros", "rt"] }
