[package]
name = "auth_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
uuid = { version = "1.7.0" }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
