[package]
name = "auth_module"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0" }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
